etapa2/y.output
Terminals unused in grammar

    KW_THEN
    TOKEN_ERROR


State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: listaDeclaracoes

    2 listaDeclaracoes: declaracao listaDeclaracoes
    3                 | ε

    4 declaracao: comando
    5           | variavel
    6           | funcao

    7 variavel: tipo nome '=' literal ';'
    8         | tipo nome '[' LIT_INT ']' literais ';'

    9 nome: TK_IDENTIFIER

   10 literal: LIT_INT
   11        | LIT_REAL
   12        | LIT_CHAR
   13        | LIT_STRING

   14 literais: literal literais
   15         | ε

   16 tipo: KW_BOOL
   17     | KW_CHAR
   18     | KW_INT
   19     | KW_REAL

   20 funcao: cabecalho bloco

   21 cabecalho: tipo nome '(' definicaoListaParametros ')'

   22 definicaoParametros: tipo nome virgulaDefinicaoParametrosOuVazio

   23 virgulaDefinicaoParametrosOuVazio: ',' definicaoParametros
   24                                  | ε

   25 definicaoListaParametros: definicaoParametros
   26                         | ε

   27 bloco: '{' comandos '}'

   28 comandos: comando comandos
   29         | ε

   30 comando: bloco
   31        | ';'
   32        | atribuicao
   33        | controleFluxo
   34        | outputComando
   35        | returnComando

   36 atribuicao: nome '=' expressao ';'
   37           | nome '[' expressao ']' '=' expressao ';'

   38 controleFluxo: KW_IF '(' expressao ')' comando
   39              | KW_IF '(' expressao ')' comando KW_ELSE comando
   40              | KW_IF '(' expressao ')' KW_LOOP comando

   41 outputComando: KW_OUTPUT outputElementos ';'

   42 returnComando: KW_RETURN expressao ';'

   43 outputElementos: expressao virgulaOutputElementosOuVazio
   44                | LIT_STRING virgulaOutputElementosOuVazio

   45 virgulaOutputElementosOuVazio: ',' outputElementos
   46                              | ε

   47 expressao: expressao '+' expressao
   48          | expressao '-' expressao
   49          | expressao '*' expressao
   50          | expressao '/' expressao
   51          | expressao '<' expressao
   52          | expressao '>' expressao
   53          | expressao '&' expressao
   54          | expressao '~' expressao
   55          | expressao '|' expressao
   56          | expressao OPERATOR_GE expressao
   57          | expressao OPERATOR_LE expressao
   58          | expressao OPERATOR_EQ expressao
   59          | expressao OPERATOR_DIF expressao
   60          | '(' expressao ')'
   61          | nome
   62          | LIT_INT
   63          | LIT_CHAR
   64          | nome '(' passagemListaParametros ')'
   65          | KW_INPUT '(' tipo ')'
   66          | nome '[' expressao ']'

   67 passagemParametros: expressao virgulaPassagemParametrosOuVazio

   68 virgulaPassagemParametrosOuVazio: ',' passagemParametros
   69                                 | ε

   70 passagemListaParametros: passagemParametros
   71                        | ε


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 53
    '(' (40) 21 38 39 40 60 64 65
    ')' (41) 21 38 39 40 60 64 65
    '*' (42) 49
    '+' (43) 47
    ',' (44) 23 45 68
    '-' (45) 48
    '/' (47) 50
    ';' (59) 7 8 31 36 37 41 42
    '<' (60) 51
    '=' (61) 7 36 37
    '>' (62) 52
    '[' (91) 8 37 66
    ']' (93) 8 37 66
    '{' (123) 27
    '|' (124) 55
    '}' (125) 27
    '~' (126) 54
    error (256)
    KW_CHAR (258) 17
    KW_INT (259) 18
    KW_REAL (260) 19
    KW_BOOL (261) 16
    KW_IF (262) 38 39 40
    KW_THEN (263)
    KW_ELSE (264) 39
    KW_LOOP (265) 40
    KW_INPUT (266) 65
    KW_OUTPUT (267) 41
    KW_RETURN (268) 42
    OPERATOR_LE (269) 57
    OPERATOR_GE (270) 56
    OPERATOR_EQ (271) 58
    OPERATOR_DIF (272) 59
    TK_IDENTIFIER (273) 9
    LIT_INT (274) 8 10 62
    LIT_REAL (275) 11
    LIT_CHAR (276) 12 63
    LIT_STRING (277) 13 44
    TOKEN_ERROR (278)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    programa (43)
        on left: 1
        on right: 0
    listaDeclaracoes (44)
        on left: 2 3
        on right: 1 2
    declaracao (45)
        on left: 4 5 6
        on right: 2
    variavel (46)
        on left: 7 8
        on right: 5
    nome (47)
        on left: 9
        on right: 7 8 21 22 36 37 61 64 66
    literal (48)
        on left: 10 11 12 13
        on right: 7 14
    literais (49)
        on left: 14 15
        on right: 8 14
    tipo (50)
        on left: 16 17 18 19
        on right: 7 8 21 22 65
    funcao (51)
        on left: 20
        on right: 6
    cabecalho (52)
        on left: 21
        on right: 20
    definicaoParametros (53)
        on left: 22
        on right: 23 25
    virgulaDefinicaoParametrosOuVazio (54)
        on left: 23 24
        on right: 22
    definicaoListaParametros (55)
        on left: 25 26
        on right: 21
    bloco (56)
        on left: 27
        on right: 20 30
    comandos (57)
        on left: 28 29
        on right: 27 28
    comando (58)
        on left: 30 31 32 33 34 35
        on right: 4 28 38 39 40
    atribuicao (59)
        on left: 36 37
        on right: 32
    controleFluxo (60)
        on left: 38 39 40
        on right: 33
    outputComando (61)
        on left: 41
        on right: 34
    returnComando (62)
        on left: 42
        on right: 35
    outputElementos (63)
        on left: 43 44
        on right: 41 45
    virgulaOutputElementosOuVazio (64)
        on left: 45 46
        on right: 43 44
    expressao (65)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 36 37 38 39 40 42 43 47 48 49 50 51 52 53 54 55 56 57 58 59 60 66 67
    passagemParametros (66)
        on left: 67
        on right: 68 70
    virgulaPassagemParametrosOuVazio (67)
        on left: 68 69
        on right: 67
    passagemListaParametros (68)
        on left: 70 71
        on right: 64


State 0

    0 $accept: • programa $end

    KW_CHAR        shift, and go to state 1
    KW_INT         shift, and go to state 2
    KW_REAL        shift, and go to state 3
    KW_BOOL        shift, and go to state 4
    KW_IF          shift, and go to state 5
    KW_OUTPUT      shift, and go to state 6
    KW_RETURN      shift, and go to state 7
    TK_IDENTIFIER  shift, and go to state 8
    ';'            shift, and go to state 9
    '{'            shift, and go to state 10

    $default  reduce using rule 3 (listaDeclaracoes)

    programa          go to state 11
    listaDeclaracoes  go to state 12
    declaracao        go to state 13
    variavel          go to state 14
    nome              go to state 15
    tipo              go to state 16
    funcao            go to state 17
    cabecalho         go to state 18
    bloco             go to state 19
    comando           go to state 20
    atribuicao        go to state 21
    controleFluxo     go to state 22
    outputComando     go to state 23
    returnComando     go to state 24


State 1

   17 tipo: KW_CHAR •

    $default  reduce using rule 17 (tipo)


State 2

   18 tipo: KW_INT •

    $default  reduce using rule 18 (tipo)


State 3

   19 tipo: KW_REAL •

    $default  reduce using rule 19 (tipo)


State 4

   16 tipo: KW_BOOL •

    $default  reduce using rule 16 (tipo)


State 5

   38 controleFluxo: KW_IF • '(' expressao ')' comando
   39              | KW_IF • '(' expressao ')' comando KW_ELSE comando
   40              | KW_IF • '(' expressao ')' KW_LOOP comando

    '('  shift, and go to state 25


State 6

   41 outputComando: KW_OUTPUT • outputElementos ';'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    LIT_STRING     shift, and go to state 29
    '('            shift, and go to state 30

    nome             go to state 31
    outputElementos  go to state 32
    expressao        go to state 33


State 7

   42 returnComando: KW_RETURN • expressao ';'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 34


State 8

    9 nome: TK_IDENTIFIER •

    $default  reduce using rule 9 (nome)


State 9

   31 comando: ';' •

    $default  reduce using rule 31 (comando)


State 10

   27 bloco: '{' • comandos '}'

    KW_IF          shift, and go to state 5
    KW_OUTPUT      shift, and go to state 6
    KW_RETURN      shift, and go to state 7
    TK_IDENTIFIER  shift, and go to state 8
    ';'            shift, and go to state 9
    '{'            shift, and go to state 10

    $default  reduce using rule 29 (comandos)

    nome           go to state 15
    bloco          go to state 19
    comandos       go to state 35
    comando        go to state 36
    atribuicao     go to state 21
    controleFluxo  go to state 22
    outputComando  go to state 23
    returnComando  go to state 24


State 11

    0 $accept: programa • $end

    $end  shift, and go to state 37


State 12

    1 programa: listaDeclaracoes •

    $default  reduce using rule 1 (programa)


State 13

    2 listaDeclaracoes: declaracao • listaDeclaracoes

    KW_CHAR        shift, and go to state 1
    KW_INT         shift, and go to state 2
    KW_REAL        shift, and go to state 3
    KW_BOOL        shift, and go to state 4
    KW_IF          shift, and go to state 5
    KW_OUTPUT      shift, and go to state 6
    KW_RETURN      shift, and go to state 7
    TK_IDENTIFIER  shift, and go to state 8
    ';'            shift, and go to state 9
    '{'            shift, and go to state 10

    $default  reduce using rule 3 (listaDeclaracoes)

    listaDeclaracoes  go to state 38
    declaracao        go to state 13
    variavel          go to state 14
    nome              go to state 15
    tipo              go to state 16
    funcao            go to state 17
    cabecalho         go to state 18
    bloco             go to state 19
    comando           go to state 20
    atribuicao        go to state 21
    controleFluxo     go to state 22
    outputComando     go to state 23
    returnComando     go to state 24


State 14

    5 declaracao: variavel •

    $default  reduce using rule 5 (declaracao)


State 15

   36 atribuicao: nome • '=' expressao ';'
   37           | nome • '[' expressao ']' '=' expressao ';'

    '='  shift, and go to state 39
    '['  shift, and go to state 40


State 16

    7 variavel: tipo • nome '=' literal ';'
    8         | tipo • nome '[' LIT_INT ']' literais ';'
   21 cabecalho: tipo • nome '(' definicaoListaParametros ')'

    TK_IDENTIFIER  shift, and go to state 8

    nome  go to state 41


State 17

    6 declaracao: funcao •

    $default  reduce using rule 6 (declaracao)


State 18

   20 funcao: cabecalho • bloco

    '{'  shift, and go to state 10

    bloco  go to state 42


State 19

   30 comando: bloco •

    $default  reduce using rule 30 (comando)


State 20

    4 declaracao: comando •

    $default  reduce using rule 4 (declaracao)


State 21

   32 comando: atribuicao •

    $default  reduce using rule 32 (comando)


State 22

   33 comando: controleFluxo •

    $default  reduce using rule 33 (comando)


State 23

   34 comando: outputComando •

    $default  reduce using rule 34 (comando)


State 24

   35 comando: returnComando •

    $default  reduce using rule 35 (comando)


State 25

   38 controleFluxo: KW_IF '(' • expressao ')' comando
   39              | KW_IF '(' • expressao ')' comando KW_ELSE comando
   40              | KW_IF '(' • expressao ')' KW_LOOP comando

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 43


State 26

   65 expressao: KW_INPUT • '(' tipo ')'

    '('  shift, and go to state 44


State 27

   62 expressao: LIT_INT •

    $default  reduce using rule 62 (expressao)


State 28

   63 expressao: LIT_CHAR •

    $default  reduce using rule 63 (expressao)


State 29

   44 outputElementos: LIT_STRING • virgulaOutputElementosOuVazio

    ','  shift, and go to state 45

    $default  reduce using rule 46 (virgulaOutputElementosOuVazio)

    virgulaOutputElementosOuVazio  go to state 46


State 30

   60 expressao: '(' • expressao ')'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 47


State 31

   61 expressao: nome •
   64          | nome • '(' passagemListaParametros ')'
   66          | nome • '[' expressao ']'

    '['  shift, and go to state 48
    '('  shift, and go to state 49

    $default  reduce using rule 61 (expressao)


State 32

   41 outputComando: KW_OUTPUT outputElementos • ';'

    ';'  shift, and go to state 50


State 33

   43 outputElementos: expressao • virgulaOutputElementosOuVazio
   47 expressao: expressao • '+' expressao
   48          | expressao • '-' expressao
   49          | expressao • '*' expressao
   50          | expressao • '/' expressao
   51          | expressao • '<' expressao
   52          | expressao • '>' expressao
   53          | expressao • '&' expressao
   54          | expressao • '~' expressao
   55          | expressao • '|' expressao
   56          | expressao • OPERATOR_GE expressao
   57          | expressao • OPERATOR_LE expressao
   58          | expressao • OPERATOR_EQ expressao
   59          | expressao • OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 51
    OPERATOR_GE   shift, and go to state 52
    OPERATOR_EQ   shift, and go to state 53
    OPERATOR_DIF  shift, and go to state 54
    '&'           shift, and go to state 55
    '~'           shift, and go to state 56
    '|'           shift, and go to state 57
    '<'           shift, and go to state 58
    '>'           shift, and go to state 59
    '+'           shift, and go to state 60
    '-'           shift, and go to state 61
    '*'           shift, and go to state 62
    '/'           shift, and go to state 63
    ','           shift, and go to state 45

    $default  reduce using rule 46 (virgulaOutputElementosOuVazio)

    virgulaOutputElementosOuVazio  go to state 64


State 34

   42 returnComando: KW_RETURN expressao • ';'
   47 expressao: expressao • '+' expressao
   48          | expressao • '-' expressao
   49          | expressao • '*' expressao
   50          | expressao • '/' expressao
   51          | expressao • '<' expressao
   52          | expressao • '>' expressao
   53          | expressao • '&' expressao
   54          | expressao • '~' expressao
   55          | expressao • '|' expressao
   56          | expressao • OPERATOR_GE expressao
   57          | expressao • OPERATOR_LE expressao
   58          | expressao • OPERATOR_EQ expressao
   59          | expressao • OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 51
    OPERATOR_GE   shift, and go to state 52
    OPERATOR_EQ   shift, and go to state 53
    OPERATOR_DIF  shift, and go to state 54
    '&'           shift, and go to state 55
    '~'           shift, and go to state 56
    '|'           shift, and go to state 57
    '<'           shift, and go to state 58
    '>'           shift, and go to state 59
    '+'           shift, and go to state 60
    '-'           shift, and go to state 61
    '*'           shift, and go to state 62
    '/'           shift, and go to state 63
    ';'           shift, and go to state 65


State 35

   27 bloco: '{' comandos • '}'

    '}'  shift, and go to state 66


State 36

   28 comandos: comando • comandos

    KW_IF          shift, and go to state 5
    KW_OUTPUT      shift, and go to state 6
    KW_RETURN      shift, and go to state 7
    TK_IDENTIFIER  shift, and go to state 8
    ';'            shift, and go to state 9
    '{'            shift, and go to state 10

    $default  reduce using rule 29 (comandos)

    nome           go to state 15
    bloco          go to state 19
    comandos       go to state 67
    comando        go to state 36
    atribuicao     go to state 21
    controleFluxo  go to state 22
    outputComando  go to state 23
    returnComando  go to state 24


State 37

    0 $accept: programa $end •

    $default  accept


State 38

    2 listaDeclaracoes: declaracao listaDeclaracoes •

    $default  reduce using rule 2 (listaDeclaracoes)


State 39

   36 atribuicao: nome '=' • expressao ';'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 68


State 40

   37 atribuicao: nome '[' • expressao ']' '=' expressao ';'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 69


State 41

    7 variavel: tipo nome • '=' literal ';'
    8         | tipo nome • '[' LIT_INT ']' literais ';'
   21 cabecalho: tipo nome • '(' definicaoListaParametros ')'

    '='  shift, and go to state 70
    '['  shift, and go to state 71
    '('  shift, and go to state 72


State 42

   20 funcao: cabecalho bloco •

    $default  reduce using rule 20 (funcao)


State 43

   38 controleFluxo: KW_IF '(' expressao • ')' comando
   39              | KW_IF '(' expressao • ')' comando KW_ELSE comando
   40              | KW_IF '(' expressao • ')' KW_LOOP comando
   47 expressao: expressao • '+' expressao
   48          | expressao • '-' expressao
   49          | expressao • '*' expressao
   50          | expressao • '/' expressao
   51          | expressao • '<' expressao
   52          | expressao • '>' expressao
   53          | expressao • '&' expressao
   54          | expressao • '~' expressao
   55          | expressao • '|' expressao
   56          | expressao • OPERATOR_GE expressao
   57          | expressao • OPERATOR_LE expressao
   58          | expressao • OPERATOR_EQ expressao
   59          | expressao • OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 51
    OPERATOR_GE   shift, and go to state 52
    OPERATOR_EQ   shift, and go to state 53
    OPERATOR_DIF  shift, and go to state 54
    '&'           shift, and go to state 55
    '~'           shift, and go to state 56
    '|'           shift, and go to state 57
    '<'           shift, and go to state 58
    '>'           shift, and go to state 59
    '+'           shift, and go to state 60
    '-'           shift, and go to state 61
    '*'           shift, and go to state 62
    '/'           shift, and go to state 63
    ')'           shift, and go to state 73


State 44

   65 expressao: KW_INPUT '(' • tipo ')'

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    tipo  go to state 74


State 45

   45 virgulaOutputElementosOuVazio: ',' • outputElementos

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    LIT_STRING     shift, and go to state 29
    '('            shift, and go to state 30

    nome             go to state 31
    outputElementos  go to state 75
    expressao        go to state 33


State 46

   44 outputElementos: LIT_STRING virgulaOutputElementosOuVazio •

    $default  reduce using rule 44 (outputElementos)


State 47

   47 expressao: expressao • '+' expressao
   48          | expressao • '-' expressao
   49          | expressao • '*' expressao
   50          | expressao • '/' expressao
   51          | expressao • '<' expressao
   52          | expressao • '>' expressao
   53          | expressao • '&' expressao
   54          | expressao • '~' expressao
   55          | expressao • '|' expressao
   56          | expressao • OPERATOR_GE expressao
   57          | expressao • OPERATOR_LE expressao
   58          | expressao • OPERATOR_EQ expressao
   59          | expressao • OPERATOR_DIF expressao
   60          | '(' expressao • ')'

    OPERATOR_LE   shift, and go to state 51
    OPERATOR_GE   shift, and go to state 52
    OPERATOR_EQ   shift, and go to state 53
    OPERATOR_DIF  shift, and go to state 54
    '&'           shift, and go to state 55
    '~'           shift, and go to state 56
    '|'           shift, and go to state 57
    '<'           shift, and go to state 58
    '>'           shift, and go to state 59
    '+'           shift, and go to state 60
    '-'           shift, and go to state 61
    '*'           shift, and go to state 62
    '/'           shift, and go to state 63
    ')'           shift, and go to state 76


State 48

   66 expressao: nome '[' • expressao ']'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 77


State 49

   64 expressao: nome '(' • passagemListaParametros ')'

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    $default  reduce using rule 71 (passagemListaParametros)

    nome                     go to state 31
    expressao                go to state 78
    passagemParametros       go to state 79
    passagemListaParametros  go to state 80


State 50

   41 outputComando: KW_OUTPUT outputElementos ';' •

    $default  reduce using rule 41 (outputComando)


State 51

   57 expressao: expressao OPERATOR_LE • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 81


State 52

   56 expressao: expressao OPERATOR_GE • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 82


State 53

   58 expressao: expressao OPERATOR_EQ • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 83


State 54

   59 expressao: expressao OPERATOR_DIF • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 84


State 55

   53 expressao: expressao '&' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 85


State 56

   54 expressao: expressao '~' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 86


State 57

   55 expressao: expressao '|' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 87


State 58

   51 expressao: expressao '<' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 88


State 59

   52 expressao: expressao '>' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 89


State 60

   47 expressao: expressao '+' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 90


State 61

   48 expressao: expressao '-' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 91


State 62

   49 expressao: expressao '*' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 92


State 63

   50 expressao: expressao '/' • expressao

    KW_INPUT       shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 8
    LIT_INT        shift, and go to state 27
    LIT_CHAR       shift, and go to state 28
    '('            shift, and go to state 30

    nome       go to state 31
    expressao  go to state 93


State 64

   43 outputElementos: expressao virgulaOutputElementosOuVazio •

    $default  reduce using rule 43 (outputElementos)


State 65

   42 returnComando: KW_RETURN expressao ';' •

    $default  reduce using rule 42 (returnComando)


State 66

   27 bloco: '{' comandos '}' •

    $default  reduce using rule 27 (bloco)


State 67

   28 comandos: comando comandos •

    $default  reduce using rule 28 (comandos)


State 68

   36 atribuicao: nome '=' expressao • ';'
   47 expressao: expressao • '+' expressao
   48          | expressao • '-' expressao
   49          | expressao • '*' expressao
   50          | expressao • '/' expressao
   51          | expressao • '<' expressao
   52          | expressao • '>' expressao
   53          | expressao • '&' expressao
   54          | expressao • '~' expressao
   55          | expressao • '|' expressao
   56          | expressao • OPERATOR_GE expressao
   57          | expressao • OPERATOR_LE expressao
   58          | expressao • OPERATOR_EQ expressao
   59          | expressao • OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 51
    OPERATOR_GE   shift, and go to state 52
    OPERATOR_EQ   shift, and go to state 53
    OPERATOR_DIF  shift, and go to state 54
    '&'           shift, and go to state 55
    '~'           shift, and go to state 56
    '|'           shift, and go to state 57
    '<'           shift, and go to state 58
    '>'           shift, and go to state 59
    '+'           shift, and go to state 60
    '-'           shift, and go to state 61
    '*'           shift, and go to state 62
    '/'           shift, and go to state 63
    ';'           shift, and go to state 94


State 69

   37 atribuicao: nome '[' expressao • ']' '=' expressao ';'
   47 expressao: expressao • '+' expressao
   48          | expressao • '-' expressao
   49          | expressao • '*' expressao
   50          | expressao • '/' expressao
   51          | expressao • '<' expressao
   52          | expressao • '>' expressao
   53          | expressao • '&' expressao
   54          | expressao • '~' expressao
   55          | expressao • '|' expressao
   56          | expressao • OPERATOR_GE expressao
   57          | expressao • OPERATOR_LE expressao
   58          | expressao • OPERATOR_EQ expressao
   59          | expressao • OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 51
    OPERATOR_GE   shift, and go to state 52
    OPERATOR_EQ   shift, and go to state 53
    OPERATOR_DIF  shift, and go to state 54
    '&'           shift, and go to state 55
    '~'           shift, and go to state 56
    '|'           shift, and go to state 57
    '<'           shift, and go to state 58
    '>'           shift, and go to state 59
    '+'           shift, and go to state 60
    '-'           shift, and go to state 61
    '*'           shift, and go to state 62
    '/'           shift, and go to state 63
    ']'           shift, and go to state 95


State 70

    7 variavel: tipo nome '=' • literal ';'

    LIT_INT     shift, and go to state 96
    LIT_REAL    shift, and go to state 97
    LIT_CHAR    shift, and go to state 98
    LIT_STRING  shift, and go to state 99

    literal  go to state 100


State 71

    8 variavel: tipo nome '[' • LIT_INT ']' literais ';'

    LIT_INT  shift, and go to state 101


State 72

   21 cabecalho: tipo nome '(' • definicaoListaParametros ')'

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    $default  reduce using rule 26 (definicaoListaParametros)

    tipo                      go to state 102
    definicaoParametros       go to state 103
    definicaoListaParametros  go to state 104


State 73

   38 controleFluxo: KW_IF '(' expressao ')' • comando
   39              | KW_IF '(' expressao ')' • comando KW_ELSE comando
   40              | KW_IF '(' expressao ')' • KW_LOOP comando

    KW_IF          shift, and go to state 5
    KW_LOOP        shift, and go to state 105
    KW_OUTPUT      shift, and go to state 6
    KW_RETURN      shift, and go to state 7
    TK_IDENTIFIER  shift, and go to state 8
    ';'            shift, and go to state 9
    '{'            shift, and go to state 10

    nome           go to state 15
    bloco          go to state 19
    comando        go to state 106
    atribuicao     go to state 21
    controleFluxo  go to state 22
    outputComando  go to state 23
    returnComando  go to state 24


State 74

   65 expressao: KW_INPUT '(' tipo • ')'

    ')'  shift, and go to state 107


State 75

   45 virgulaOutputElementosOuVazio: ',' outputElementos •

    $default  reduce using rule 45 (virgulaOutputElementosOuVazio)


State 76

   60 expressao: '(' expressao ')' •

    $default  reduce using rule 60 (expressao)


State 77
